# echo-operator-rs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  cliff.toml  rustfmt.yaml
.ci/: release.sh
.github/: kind-cluster-1.30.yaml
.github/workflows/: commitlint.yml  docker_images.yml  helm.yml  rust.yml
charts/: Makefile
charts/echo-operator/: Chart.yaml  values.schema.json  values.yaml
charts/echo-operator/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/echo-operator/tests/: clusterrole_test.yaml  clusterrolebinding_test.yaml  deployment_test.yaml  service_test.yaml  serviceaccount_test.yaml  servicemonitor_test.yaml
charts/echo-operator/tests/values/: all.yaml
charts/kaniop/: Chart.yaml  values.schema.json  values.yaml
charts/kaniop/crds/: crd-echo.yaml
charts/kaniop/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/kaniop/tests/: clusterrole_test.yaml  clusterrolebinding_test.yaml  deployment_test.yaml  service_test.yaml  serviceaccount_test.yaml  servicemonitor_test.yaml
charts/kaniop/tests/values/: all.yaml
cmd/operator/: Cargo.toml
cmd/operator/src/: main.rs
install/kubernetes/: deployment.yaml  rbac.yaml
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
kaniop_core/: Cargo.toml
kaniop_core/src/: main.rs
libs/k8s-util/: Cargo.toml
libs/k8s-util/src/: client.rs  lib.rs  metrics.rs  url.rs
libs/operator/: Cargo.toml
libs/operator/src/: controller.rs  echo.rs  error.rs  lib.rs  metrics.rs  telemetry.rs
libs/operator/src/echo/: controller.rs  finalizer.rs  mod.rs  reconcile.rs
test/: echo-example.yaml
tests/: Cargo.toml
tests/e2e/: lib.rs
