[workspace]
members = ["cmd/operator", "libs/operator", "integration-tests"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Pando85 <pando855@gmail.com>"]
rust-version = "1.81"
edition = "2021"
license-file = "LICENSE.md"
repository = "https://github.com/pando85/kanidm-operator"
homepage = "https://github.com/pando85/kanidm-operator"
readme = "README.md"

[workspace.dependencies]
clap = { version = "4.5", features = ["std", "derive"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
kube = { version = "0.95", default-features = true, features = ["client", "derive", "unstable-runtime"] }
k8s-openapi = { version = "0.23", default-features = false, features = ["v1_30"] }
