[workspace]
members = ["cmd/operator", "libs/operator", "libs/k8s-util", "tests"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Pando85 <pando855@gmail.com>"]
rust-version = "1.81"
edition = "2021"
license-file = "LICENSE.md"
repository = "https://github.com/pando85/kanidm-operator"
homepage = "https://github.com/pando85/kanidm-operator"
readme = "README.md"

[workspace.dependencies]
echo-operator-k8s-util = { path = "libs/k8s-util", version = "0.0.0" }
echo-operator = { path = "libs/operator", version = "0.0.0" }
clap = { version = "4.5", features = ["std", "derive"] }
futures = "0.3"
k8s-openapi = { version = "0.23", default-features = false, features = ["v1_30"] }
kube = { version = "0.95", default-features = true, features = ["client", "derive", "unstable-runtime"] }
prometheus-client = "0.22.3"
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"
