[package]
name = "tests"
version = "0.0.0"
edition = "2021"

[lib]
name = "e2e"
path = "e2e/lib.rs"

[features]
default = []
e2e-test = []

[dependencies]
echo-operator = { path = "../libs/operator" }
tokio = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
serde_json = { workspace = true }
