[package]
name = "kaniop"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "kaniop"
path = "src/main.rs"

[dependencies]
kaniop-operator = { path = "../../libs/operator", version = "0.0.0" }
clap = { workspace = true, features = ["cargo", "env"] }
futures = { workspace = true }
tokio = { workspace = true }
actix-web = "4.9.0"
anyhow = "1.0"
