[package]
name = "kaniop"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "kaniop"
path = "src/main.rs"

[dependencies]
kaniop-k8s-util = { workspace = true }
kaniop-operator = { workspace = true }
clap = { workspace = true, features = ["cargo", "env"] }
futures = { workspace = true }
kube = { workspace = true }
prometheus-client = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
actix-web = "4.9.0"
anyhow = "1.0"
