[package]
name = "echo-operator-bin"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "echo-operator"
path = "src/main.rs"

[dependencies]
echo-operator-k8s-util = { workspace = true }
echo-operator = { workspace = true }
clap = { workspace = true, features = ["cargo", "env"] }
futures = { workspace = true }
kube = { workspace = true }
prometheus-client = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
actix-web = "4.9.0"
anyhow = "1.0"
