[package]
name = "kaniop-k8s-util"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "kaniop_k8s_util"
path = "src/lib.rs"

[features]
default = []

[dependencies]
futures = { workspace = true }
kube = { workspace = true }
tokio = { workspace = true }
prometheus-client = { workspace = true }
tower = "0.4"
http = "1.1"
hyper-util = { version = "0.1.9", features = ["client-legacy", "http1", "tokio"] }
url-escape = "0.1.1"
