[package]
name = "kaniop_operator"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "kaniop_operator"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.95", default-features = true, features = ["derive", "runtime"] }
k8s-openapi = { version = "0.23", default-features = false, features = ["v1_30"] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0"
