[package]
name = "kaniop_operator"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "kaniop_operator"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.95", default-features = true, features = ["client", "derive", "runtime"] }
k8s-openapi = { version = "0.23", default-features = false, features = ["v1_30"] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.20.0"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["tokio"] }
tonic = "0.9"
prometheus-client = "0.22.2"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"
