[package]
name = "kaniop-operator"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "kaniop_operator"
path = "src/lib.rs"

[features]
default = []
integration-tests = []

[dependencies]
clap = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = "1.0"
schemars = "0.8"
thiserror = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.26"
opentelemetry = { version = "0.25", features = ["trace"] }
opentelemetry_sdk = { version = "0.25", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.25", features = ["tokio"] }
tonic = "0.9"
prometheus-client = "0.22.2"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"
